--- a/public/book.html
+++ b/public/book.html
@@ -46,16 +46,17 @@
         .btn-secondary { background-color: #6B7280; color: white; }
         .btn-secondary:hover { background-color: #4B5563; }
         .btn-disabled { background-color: #D1D5DB; cursor: not-allowed; }
-    </style>
+</style>
 </head>
-<body class="p-2 md:p-8 bg-gray-100">
+<body class="bg-gray-100 min-h-screen">
 
-    <div id="book-login-view" class="max-w-md mx-auto mb-8 bg-white p-6 rounded-lg shadow-lg">
-        <div class="border-b border-gray-200">
-            <nav class="-mb-px flex space-x-6" aria-label="Tabs">
-                <button id="book-student-login-tab" class="login-tab whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">🧑‍🎓 학생</button>
-                <button id="book-teacher-login-tab" class="login-tab whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">🧑‍🏫 교사</button>
-            </nav>
+    <div id="book-auth-container" class="min-h-screen flex flex-col items-center justify-center px-4 py-10">
+        <div id="book-login-view" class="w-full max-w-md bg-white p-6 rounded-lg shadow-lg">
+            <div class="border-b border-gray-200">
+                <nav class="-mb-px flex space-x-6" aria-label="Tabs">
+                    <button id="book-student-login-tab" class="login-tab whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">🧑‍🎓 학생</button>
+                    <button id="book-teacher-login-tab" class="login-tab whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">🧑‍🏫 교사</button>
+                </nav>
         </div>
         <div id="book-student-login-content" class="tab-content pt-6">
             <div class="mb-4">
@@ -82,7 +83,7 @@
         </div>
     </div>
 
-    <div id="book-student-register-view" class="max-w-md mx-auto mb-8 bg-white p-6 rounded-lg shadow-lg hidden">
+        <div id="book-student-register-view" class="w-full max-w-md bg-white p-6 rounded-lg shadow-lg hidden">
         <h2 class="text-2xl font-bold mb-6 text-center">🧑‍🎓 학생 등록</h2>
         <div class="mb-4">
             <label for="book-student-name" class="block text-sm font-medium text-gray-700 mb-1">이름</label>
@@ -92,7 +93,7 @@
         <button id="book-back-to-login-btn" class="w-full text-center text-sm text-gray-600 hover:underline">로그인 화면으로 돌아가기</button>
     </div>
 
-    <div id="book-teacher-register-view" class="max-w-md mx-auto mb-8 bg-white p-6 rounded-lg shadow-lg hidden">
+        <div id="book-teacher-register-view" class="w-full max-w-md bg-white p-6 rounded-lg shadow-lg hidden">
         <h2 class="text-2xl font-bold mb-6 text-center">🧑‍🏫 교사 회원가입</h2>
         <div class="mb-4">
             <label for="book-teacher-register-name" class="block text-sm font-medium text-gray-700 mb-1">이름</label>
@@ -110,7 +111,9 @@
         <button id="book-teacher-back-to-login-btn" class="w-full text-center text-sm text-gray-600 hover:underline">로그인 화면으로 돌아가기</button>
     </div>
 
-    <div id="book-content" class="hidden">
+    </div>
+
+    <div id="book-content" class="hidden px-2 md:px-8 py-6">
     <div class="max-w-7xl mx-auto mb-4 flex justify-between items-center">
         <h1 class="flex items-center gap-2 text-3xl font-extrabold text-amber-600">📚 <span>에이두 북메이커</span></h1>
         <div class="flex items-center gap-3 bg-white border rounded-full px-4 py-2">
@@ -2584,6 +2587,7 @@
         auth = getAuth(app);
         db = getFirestore(app);
         storage = getStorage(app);
+        const authContainer = document.getElementById('book-auth-container');
         const studentLoginTab = document.getElementById('book-student-login-tab');
         const teacherLoginTab = document.getElementById('book-teacher-login-tab');
         const studentLoginContent = document.getElementById('book-student-login-content');
@@ -2615,6 +2619,9 @@
         const teacherBackToLoginBtn = document.getElementById('book-teacher-back-to-login-btn');
 
         function showLoginView() {
+            if (authContainer) {
+                authContainer.classList.remove('hidden');
+            }
             document.getElementById('book-login-view').classList.remove('hidden');
             studentRegisterView.classList.add('hidden');
             teacherRegisterView.classList.add('hidden');
@@ -3202,6 +3209,9 @@
             const viewerPage = document.getElementById('book-viewer-page');
             const listSection = document.getElementById('book-list-section');
             if (user) {
+                if (authContainer) {
+                    authContainer.classList.add('hidden');
+                }
                 loginView.classList.add('hidden');
                 studentRegisterView.classList.add('hidden');
                 teacherRegisterView.classList.add('hidden');
@@ -3228,6 +3238,9 @@
                     }
                 }
             } else {
+                if (authContainer) {
+                    authContainer.classList.remove('hidden');
+                }
                 loginView.classList.remove('hidden');
                 studentRegisterView.classList.add('hidden');
                 teacherRegisterView.classList.add('hidden');
