Fix student class fetching import

--- a/public/index.html
+++ b/public/index.html
@@ -1237,7 +1237,7 @@
         import { getFirestore, doc, getDoc, setDoc, collection, query, where, getDocs, runTransaction, updateDoc, increment, deleteField, serverTimestamp, Timestamp, orderBy, addDoc, deleteDoc, arrayUnion } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
         import { getFunctions, httpsCallable } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-functions.js";
         import { getStorage, ref as storageRef, getDownloadURL, deleteObject } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-storage.js";
-        import { fetchClassesForStudent } from "./js/classManager.js";
+        import { fetchClassesForStudent } from "./js/studentClassService.js";
 
         // IMPORTANT: Replace with your actual Firebase config
         const firebaseConfig = {
